**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-8

* predict.gam and predict.bam now accept an 'exclude' argument allowing 
  terms (e.g. random effects) to be zeroed for prediction. For efficiency,
  smooth terms not in 'terms' or in 'exclude' are no longer evaluated, and 
  are instead set to zero or not returned. See ?predict.gam.

* ocat saturated likelihood definition changed to zero, leading to better 
  comprability of deviance between model fits.

* null.deviance calculation for extended families modified to make more sense
  when `mu' is the mean of a latent variable, rather than the response itself. 

* bam now returns standarized residuals 'std.rsd' if `rho!=0'. 

* bam(...,discrete=TRUE) can now handle 'fs' terms.

* bam(...,discrete=TRUE) now accepts 'by' variables. Thanks to Zheyaun Li
  for debugging on this.

* bam now works with drop.unused.levels == TRUE when random effects should
  have more levels than those that exist in data. (Thanks Alec Leh) 

* bam chunk.size logic error fix - error could be triggered if chunk.size
  reset automaticlly to be larger than data size.

* uniqucombs can now accept a data frame with some or all factor columns,
  as well as purely numeric marices.

* discrete.mf modified to avoid discretizing a covariate more than once,
  and to halt if a model requires the same covariate to be discretized 
  two different ways (e.g. s(x) + s(x,z)). This affects only 
  bam(...,discrete=TRUE).

1.8-7

** 'gam' default scale parameter changed to modified Pearson estimator 
  developed by Fletcher 2012 Biometrika 99(1), 230-237. See ?gam.scale.

** 'bam' now has a 'discrete' argument to allow discretization of covariates
  for more efficient computation, with substantially more parallelization
  (via 'nthreads'). Still somewhat experimental. 

* Slightly more accurate smoothing parameter uncertainty correction. Changes 
  edf2 used for AIC (under RE/ML), and hence may change AIC values. 
